changes related to speech

--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -47,13 +47,13 @@ jQuery(document).ready(function($) {
 		<span class="menu"><img src="./firstPage/images/menu.png" alt=""/></span>
 			<nav class="cl-effect-11" id="cl-effect-11">	
 				<ul class="nav1">	
-					<li><a class="scroll" href="#home"  data-hover="HOME">HOME</a></li>
-					<li><a class="scroll" href="#about"  data-hover="ABOUT">ABOUT</a></li>
-					<li><a class="scroll" href="#services"  data-hover="SERVICES">SERVICE</a></li>
-					<li><a class="scroll" href="#team"  data-hover="TEAM">TEAM</a></li>
-					<li><a class="scroll" href="#gallery"  data-hover="GALLERY">GALLERY</a></li>
-					<li><a class="scroll" href="#contact"  data-hover="CONTACT">CONTACT</a></li>	
-					<li><a class="scroll" id="login" data-hover="Login"  ng-click = "global.openModal('template/modals/login.html', 'loginSignUp')" data-hover="Login">Login</a></li>
+					<li><a class="scroll" href="#home" name="home"  data-hover="HOME">HOME</a></li>
+					<li><a class="scroll" href="#about" name="about" data-hover="ABOUT">ABOUT</a></li>
+					<li><a class="scroll" href="#services" name="service" data-hover="SERVICE">SERVICE</a></li>
+					<li><a class="scroll" href="#team" name="team" data-hover="TEAM">TEAM</a></li>
+					<li><a class="scroll" href="#gallery" name="gallery" data-hover="GALLERY">GALLERY</a></li>
+					<li><a class="scroll" href="#contact" name="contact" data-hover="CONTACT">CONTACT</a></li>	
+					<li><a class="scroll" id="login" name="login" data-hover="Login"  ng-click = "global.openModal('template/modals/login.html', 'loginSignUp')" data-hover="Login">Login</a></li>
 					<li><a  id="speech" class="scroll" data-hover="CLICK" onclick="toggleStartStop()">Click TO Speak</a></li>							
 				</ul>
 			</nav>
