--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
     <script src="js/controller/modal/modal.js"></script>
     <script src="chat/chatBox.js"></script>
    
-    <!-- for first page -->
+    <!-- for first page date site-->
     <script src="js/speech.js"></script>
+
+
+    <!-- for coach firstPage -->
+    <script src="./coach/js/servicesFactory.js"></script>
 </body>
 
 </html>
