--- a/coach/firstPage/index.html
+++ b/coach/firstPage/index.html
@@ -2,9 +2,7 @@
 
 <link href="./coach/firstPage/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="./coach/firstPage/css/myOwnCoach.css" rel="stylesheet" type="text/css"/>
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-<link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
+<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'> -->
 
 <body>
 <div class="header-bg">
@@ -14,8 +12,8 @@
 					<div class="header_top">
 				     	<div class="menu">
 				     		<ul>
-						    	<li class="active"><a href="index.html">Home</a></li>
-						    	<li><a href="about.html">About</a></li>
+						    	<li ng-class="{'active': coach.tab === 'home'}"><a href="javascript:void(0)" ng-click = "coach.routing('home');coach.tab='home'">Home</a></li>
+						    	<li><a  ng-class="{'active': coach.tab === 'about'}" href="javascript:void(0)" ng-click = "coach.routing('about');coach.tab='home'">About</a></li>
 						    	<li><a href="staff.html">Staff</a></li>
 						    	<li><a href="programs.html">Programs</a></li>
 						    	<li><a href="contact.html">Contact</a></li>
@@ -23,9 +21,9 @@
 			     			</ul>
 				     	</div>
 				     	<ul class="follow_icon">
-							<li><a href="#" style="opacity: 1;"><img src="./coach/firstPage/images/fb.png" alt=""></a></li>
-							<li><a href="#" style="opacity: 1;"><img src="./coach/firstPage/images/tw.png" alt=""></a></li>
-							<li><a href="#" style="opacity: 1;"><img src="./coach/firstPage/images/rss.png" alt=""></a></li>
+							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/fb.png" alt=""></a></li>
+							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/tw.png" alt=""></a></li>
+							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/rss.png" alt=""></a></li>
 						</ul>
 		     			<div class="clear"></div>
 		     	</div>
@@ -33,141 +31,14 @@
 					 <div class="logo">
 						<h1><a href="index.html">Guidance</a></h1>
 					 </div>
-					<!-- <div class="search">
-						   <form>
-						    	<input type="text" value="">
-						    	<input type="submit" value="">
-						  </form>
-					</div> -->
 					<div class="clear"></div> 
 				</div>
 			</div>	
 		</div>
 	 </div>
 </div>
-	<div class="banner-box">
-		<div class="wrap">
-			<div class="main-top">
-				<div class="main">
-					<div class="banner">
-						<img src="./coach/firstPage/images/banner1.jpg" alt=""/>
-					</div>
-					<div class="section-top">
-						<div class="col_1_of_3 span_1_of_3">
-							<div class="title-img">
-								<div class="title"><img src="./coach/firstPage/images/book1.png" alt=""/></div>
-									<div class="title-desc"><p>Resource library</p></div>
-									<div class="clear"></div> 
-							</div>
-							<p class="desc"><strong>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</strong></p>
-							<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</p>
-							<button class="btn btn-primary"><span>Read more</span><img class="imgResize" src="./coach/firstPage/imgOwn/more_arrow.png" alt=""></button>
-							<button class="btn btn-primary"><span>Edit Content</span><img class="imgResize" src="./coach/firstPage/imgOwn/edit.jpg" alt=""></button>
-							<button class="btn btn-primary"><span>Delete Content</span><img class="imgResize" src="./coach/firstPage/imgOwn/delete.png" alt=""></button>
-						</div>
+<div  ui-view="content"></div>
 
-						<!-- <div class="col_1_of_3 span_1_of_3">
-							<div class="title-img1">
-								<div class="title"><img src="./coach/firstPage/images/cup.png" alt=""/></div>
-									<div class="title-desc"><p>Support & Advice</p></div>
-									<div class="clear"></div> 
-							</div>					
-							<p class="desc-middle"><strong>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</strong></p>
-							<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</p>
-							<a href="#" class="btn btn-primary1"><span>Read more</span><img src="./coach/firstPage/images/more_arrow.png" alt=""></a>
-						</div>
-						<div class="col_1_of_3 span_1_of_3">
-							<div class="title-img2">
-								<div class="title"><img src="./coach/firstPage/images/books.png" alt=""/></div>
-								<div class="title-desc"><p>Resource library</p></div>
-									<div class="clear"></div> 
-							</div>
-							<p class="last"><strong>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</strong></p>
-							<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet conse ctetur adipisicing elit.</p>
-							<a href="#" class="btn btn-primary2"><span>Read more</span><img src="./coach/firstPage/images/more_arrow.png" alt=""></a>
-						</div> -->
-
-						<div class="clear"></div>
-
-					</div>
-					<button class="btn btn-primary"><span>Add New</span><img class="imgResize" src="./coach/firstPage/imgOwn/add.png" alt=""></button>
-					
-				</div>
-			</div>
-		</div>
-		<div class="main-bottom">
-			<div class="wrap">
-			<div class="content-bottom">
-				<div class="col_1_of_3 span_1_of_3">
-					<h3>Welcome to our Centre!</h3>
-					<p class="desc2"><strong>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</strong></p>
-					<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ.</p>
-					<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut conse ctetur adipisicing elit, sed do eiusmod conse ctetur adipisicing elit, sed do eiusmod</p>
-					<a href="#" class="btn btn-primary"><span>Read more</span><img src="./coach/firstPage/images/more_arrow.png" alt=""></a>
-				</div>
-				<div class="col_1_of_3 span_1_of_3">
-					<h3>Teaching Support</h3>
-					<ul class="dishes_list">
-										<li><a href="#">Consectetur adipisicing elit</a></li>
-										<li><a href="#">Sed do eiusmod tempor incididunt</a></li>
-										<li><a href="#">Labore et dolore magna aliqua.</a></li>
-										<li><a href="#">Sed do eiusmod tempor Dolore</a></li>
-										<li><a href="#">Abore et dolore magna Dolore elit</a></li>
-										<li><a href="#">Incididunt ut labore et dolore</a></li>
-										<li><a href="#">Incididunt ut labore et dolore</a></li>
-										<li class="last"><a href="#">Adipisicing elit, sed do eiusmod</a></li>
-										<div class="clear"> </div>
-									</ul>
-									<a href="#" class="btn btn-primary1"><span>Read more</span><img src="./coach/firstPage/images/more_arrow.png" alt=""></a>
-				</div>
-				<div class="col_1_of_3 span_1_of_3">
-					<h3>Latest News</h3>
-								<div class="latest-news-grid">
-									<div class="latest-news-pic">
-										<img src="./coach/firstPage/images/pic.jpg" title="imag-name">
-									</div>
-									<div class="latest-news-info">
-										<a href="#">Jan 21.01.2013</a>
-										<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor</p>
-									</div>
-									<div class="clear"> </div>
-								</div>
-								<div class="latest-news-grid">
-									<div class="latest-news-pic">
-										<img src="./coach/firstPage/images/pic1.jpg" title="imag-name">
-									</div>
-									<div class="latest-news-info">
-										<a href="#">Jan 21.01.2013</a>
-										<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor</p>
-									</div>
-									<div class="clear"> </div>
-								</div>
-								<div class="latest-news-grid">
-									<div class="latest-news-pic">
-										<img src="./coach/firstPage/images/pic2.jpg" title="imag-name">
-									</div>
-									<div class="latest-news-info">
-										<a href="#">Jan 21.01.2013</a>
-										<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor</p>
-									</div>
-									<div class="clear"> </div>
-								</div>
-								<div class="latest-news-grid">
-									<div class="latest-news-pic">
-										<img src="./coach/firstPage/images/pic3.jpg" title="imag-name">
-									</div>
-									<div class="latest-news-info">
-										<a href="#">Jan 21.01.2013</a>
-										<p class="desc1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor</p>
-									</div>
-									<div class="clear"> </div>
-								</div>
-					<a href="#" class="btn btn-primary2"><span>Read more</span><img src="./coach/firstPage/images/more_arrow.png" alt=""></a>
-				</div>
-				<div class="clear"></div> 
-			</div>
-			</div>
-		</div>
-	    <div class="wrap">
+	
 		
             
