--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>myApp</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
+    <!-- <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/price-range.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet"> -->
     <link href="css/myOwn.css" rel="stylesheet">   
     <link href="chat/popup.css" rel="stylesheet">    
     <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"> -->
 </head>
 
 <body >
@@ -32,15 +32,15 @@
       
  	<script src="js/lib/jquery.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/jquery.scrollUp.min.js"></script>
+    <!-- <script src="js/lib/jquery.scrollUp.min.js"></script>
     <script src="js/lib/price-range.js"></script>
     <script src="js/lib/jquery.prettyPhoto.js"></script>
-    <script src="js/lib/main.js"></script>
+    <script src="js/lib/main.js"></script> -->
    
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-ui-router.min.js"></script>
      <script src="js/lib/ui-bootstrap-tpls-0.14.2.min.js"></script>
-     <script src="js/lib/socket.io.js"></script>
+    <script src="js/lib/socket.io.js"></script>
     <script src="js/app.js"></script>
     <script src="js/msg.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAx265Y4brxf0EDlNs1-zbniwDRaYi1S_U&sensor=false"></script>
@@ -61,6 +61,8 @@
 
     <!-- for coach firstPage -->
     <script src="./coach/js/servicesFactory.js"></script>
+    <script src="./coach/js/mainPageCtrl.js"></script>
+    <script src="./coach/js/modals/modalsCoach.js"></script>
 </body>
 
 </html>
