--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- <div class="container123">
         
     </div> -->
-    <div  ui-view="page"></div>
+   <!--  <div  ui-view="page"></div> -->
+    <div ui-view></div>
   	<div id = "chatBox"></div>
       
  	<script src="js/lib/jquery.js"></script>
