--- a/coach/firstPage/index.html
+++ b/coach/firstPage/index.html
@@ -1,43 +1,6 @@
-
-
-<link href="./coach/firstPage/css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link href="./coach/firstPage/css/myOwnCoach.css" rel="stylesheet" type="text/css"/>
-<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'> -->
-
-<body>
-<div class="header-bg">
-	<div class="wrap"> 
-		<div class="total-box">
-				<div class="total">
-					<div class="header_top">
-				     	<div class="menu">
-				     		<ul>
-						    	<li ng-class="{'active': coach.tab === 'home'}"><a href="javascript:void(0)" ng-click = "coach.routing('home');coach.tab='home'">Home</a></li>
-						    	<li><a  ng-class="{'active': coach.tab === 'about'}" href="javascript:void(0)" ng-click = "coach.routing('about');coach.tab='home'">About</a></li>
-						    	<li><a href="staff.html">Staff</a></li>
-						    	<li><a href="programs.html">Programs</a></li>
-						    	<li><a href="contact.html">Contact</a></li>
-						    	<div class="clear"></div>
-			     			</ul>
-				     	</div>
-				     	<ul class="follow_icon">
-							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/fb.png" alt=""></a></li>
-							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/tw.png" alt=""></a></li>
-							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/rss.png" alt=""></a></li>
-						</ul>
-		     			<div class="clear"></div>
-		     	</div>
-			     <div class="header-bottom">
-					 <div class="logo">
-						<h1><a href="index.html">Guidance</a></h1>
-					 </div>
-					<div class="clear"></div> 
-				</div>
-			</div>	
-		</div>
-	 </div>
-</div>
-<div  ui-view="content"></div>
+<div  ui-view="header"></div>
+<div  ui-view="body"></div>
+<div  ui-view="footer"></div>
 
 	
 		
