--- a/coach/firstPage/index.html
+++ b/coach/firstPage/index.html
@@ -1,6 +1,9 @@
-<div  ui-view="header"></div>
-<div  ui-view="body"></div>
-<div  ui-view="footer"></div>
+<div class="main-top">
+	<div  ui-view="header"></div>
+	<div  ui-view="body"></div>
+	<div  ui-view="footer"></div>
+</div>
+
 
 	
 		
