--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
    <!--  <div  ui-view="page"></div> -->
     <div ui-view></div>
   	<div id = "chatBox"></div>
+    <div ng-show="global.isLoading" id='loader' style="width: 100%;position:absolute;height: 100%;opacity: 0.3;background-color: #333;z-index:1000">
+        <img src="./images/imgOwn/loader.gif" style="position: fixed;left:0;right:0;margin: 0 auto;top: 50%;">
+    </div>
       
  	<script src="js/lib/jquery.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
