--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <link href="chat/popup.css" rel="stylesheet">   
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
+      
+    <link type="text/css" rel="stylesheet" href="formBuilder/example/site.css"/>
+    <link type="text/css" rel="stylesheet" href="formBuilder/dist/angular-form-builder.css"/>
+
 </head>
 
 <body >
@@ -63,6 +67,13 @@
     <script src="js/lib/angular-sanitize.js"></script>
     <script src="js/lib/angular-sanitize.min.js"></script>
     <!-- <script src="js/lib/angular-summernote.min.js"></script> -->
+
+
+    <!-- for angular form builder -->
+    <script type="text/javascript" src="formBuilder/dist/angular-form-builder.js"></script>
+    <script type="text/javascript" src="formBuilder/dist/angular-form-builder-components.js"></script>
+    <script type="text/javascript" src="js/lib/angular-validator.min.js"></script>
+    <script type="text/javascript" src="js/lib/angular-validator-rules.min.js"></script>
     
     <!-- app dependecies-->
     <script src="js/app.js"></script>
@@ -87,6 +98,9 @@
     <script src="./coach/js/servicesFactory.js"></script>
     <script src="./coach/js/mainPageCtrl.js"></script>
     <script src="./coach/js/modals/modalsCoach.js"></script>
+
+    <!-- for angular form builder -->
+    <script type="text/javascript" src="formBuilder/example/demo.js"></script>
 
 
   
