some css issue resolved

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <!--  <div  ui-view="page"></div> -->
     <div ui-view></div>
   	<div id = "chatBox"></div>
-    <div ng-show="global.isLoading" id='loader' style="width: 100% !important;position:absolute !important;height: 100% !important;opacity: 0.3 !important;background-color: #333 !important;z-index:1000 !important">
+    <div ng-show="global.isLoading" id='loader' style="width: 100% !important;position:fixed !important;height: 100% !important;opacity: 0.3 !important;background-color: #333 !important;z-index:1000 !important; top: 0">
         <img src="./webdata/loader.gif" style="position: fixed;left:0;right:0;margin: 0 auto;top: 50%;">
     </div>
       
