--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="app">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     
     <title>myApp</title>
     
