--- a/innerPage/innerHeader.html
+++ b/innerPage/innerHeader.html
@@ -1,4 +1,4 @@
-<header id="header"  ng-init = "global.extractCountry()" ><!--header-->
+<header id="header"><!--header-->
 		<div class="header_top" style="margin-top: -7px;"><!--header_top-->
 			<div class="container">
 				<div class="row">
@@ -7,7 +7,7 @@
 							<ul class="nav nav-pills">
 								<li><a href="javascript:void(0)"><i class="fa fa-phone"></i> +919910430419</a></li>
 								<li><a href="javascript:void(0)"><i class="fa fa-envelope"></i> bijay.iit12@gmail.com</a></li>
-								<li ng-class="{'active': coach.tab === 'login'}" ng-click = "global.openModal('formBuilder/index.html', 'DemoController', undefined, 'extraLarge-Modal');coach.tab = 'login'"><a href="javascript:void(0)" >Form Builder</a></li>
+								<li ng-class="{'active': coach.tab === 'login'}" ng-click = "global.openModal('formBuild/form.html', 'formBuilderCtrl', undefined, 'extraLarge-Modal');coach.tab = 'login'"><a href="javascript:void(0)" >Form Builder</a></li>
 							</ul>
 						</div>
 					</div>
